<resources>
    <string name="app_name" translatable="false">MoviesAPP</string>

    <!-- Main Activity -->
    <string name="txt_new_movies">Discover the new movies showing</string>
    <string name="txt_the_best_movies">Here you will find which films are showing in cinemas, we will update the list of what\'s new in cinemas daily.</string>
    <string name="txt_verify_movies_catalog">Check movies</string>

    <!-- Home Fragment -->
    <string name="txt_movie_catalog">Films in theaters</string>
    <string name="txt_empty_movies">No movies were found.</string>
    <string name="txt_error_loading_movies">Unable to load movies.</string>
    <string name="txt_error_loading_movies_no_connection">Check your internet connection and try again.</string>
    <string name="txt_error_loading_movies_timeout">The request took too long. Try again in a moment.</string>
    <string name="txt_error_loading_movies_unauthorized">The API credential is invalid or expired.</string>
    <string name="txt_error_loading_movies_server">The movie service is unavailable right now.</string>
    <string name="txt_try_again">Try again</string>

    <!-- Detail Fragment -->
    <string name="txt_name_movie_example">Movie name</string>
    <string name="txt_description">Description</string>
    <string name="content_description_back">Go back</string>
    <string name="content_description_movie_poster">Movie poster</string>
    <string name="content_description_movie_poster_with_title">Poster for %1$s</string>

    <!-- Item Movie -->
    <string name="txt_name_movie" translatable="false">UP</string>
    <string name="txt_number_rating" translatable="false">8.6</string>
    <string name="txt_empty_description">This movie has no description.</string>
</resources>
