<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/background_details"
        android:contentDescription="@string/content_description_back"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_back"
        android:translationZ="@dimen/cardview_default_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/txt_movie_catalog"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_light"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_state_message"
        style="@style/colorWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/txt_retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/txt_error_loading_movies"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_retry"
        style="@style/buttonPurple"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/background_verify_movies"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_30"
        android:text="@string/txt_try_again"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_state_message"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_25"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:itemCount="1"
        tools:listitem="@layout/item_movie"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
