<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_20"
        tools:context=".ui.details.DetailsFragment">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/background_details"
            android:padding="@dimen/dp_10"
            android:src="@drawable/ic_back"
            android:translationZ="@dimen/cardview_default_elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="0dp"
            android:layout_height="550dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/colorWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_13"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/sp_22"
            app:layout_constraintEnd_toStartOf="@+id/img_Start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_movie"
            tools:text="@string/txt_name_movie_example" />

        <ImageView
            android:id="@+id/img_Start"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="@dimen/dp_11"
            android:layout_marginEnd="@dimen/dp_4"
            android:src="@drawable/ic_star"
            app:layout_constraintEnd_toStartOf="@+id/txt_movieRating"
            app:layout_constraintTop_toBottomOf="@+id/img_movie" />

        <TextView
            android:id="@+id/txt_movieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_13"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/yellow"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_movie"
            tools:text="@string/txt_number_rating" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_28"
            android:background="@drawable/background_details"
            android:paddingBottom="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/txt_title_description"
                style="@style/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_32"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/txt_description"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_description"
                style="@style/colorWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/poppins_light"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>